# dagRobin

./: .gitignore  CHEATSHEET.txt  Cargo.toml  Makefile  README.md  RELEASE.md  orchestrator.sh  script.sh
.github/workflows/: ci.yml  release.yml
resources/: example_prompt.md
src/: db.rs  error.rs  lib.rs  main.rs  task.rs
taskdag/: .gitignore  Cargo.toml
taskdag/src/: main.rs
taskdag/tests/: db.rs
tasks/lessons/: claude-coordinator.md  dagRobin-improvements.md
tests/: cli_metadata.rs  db.rs
