[package]
name = "dagrobin"
version = "0.1.0"
edition = "2021"
authors = ["Arthur <afa7789@gmail.com>"]
description = "DAG-based task manager for autonomous agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/afa7789/dagRobin"

[[bin]]
name = "dagRobin"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sled = "0.34"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.0"
